# genetic-fuzzy

./: CMakeLists.txt  off_xy.csv
include/: AdaBoost.h  Classifier.h  DataSource.h  Ensemble.h  Individual.h  MPU.h  Project.h  RandomGenerator.h  Utilities.h  thesis.h.in
smpi/: cluster.xml
src/: AdaBoost.cpp  DataSource.cpp  Ensemble.cpp  Individual.cpp  MPU.cpp  Project.cpp  RandomGenerator.cpp  Utilities.cpp  thesis.cpp
